refactor: amélioration de l'organisation et de la cohérence du code
- Réorganisation de la structure du projet selon le pattern MVC avec packages dédiés
- Renommage de la classe GameLogic en Game pour plus de clarté
- Implémentation et utilisation cohérente de GridIterator dans le projet
- Remplacement des coordonnées x,y par des objets BoardPosition
- Déplacement des classes dans les packages appropriés (model, view, controller, command, iterator)

Cette refactorisation améliore la maintenabilité du code et suit de meilleures pratiques de POO